# regex_playground

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  re.ipynb  ruff.toml
